@@ -1,3 +1,8 @@
+2016-10-06 Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/fru/: Revert removal of memsets libfreeipmi/fru/.
+	Are necessary b/c fields are optional.
+	
 2016-10-04 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-oem/: Audit and fix, add +1 to string buffers, use
